--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,24 +1,21 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true
-    },
-    "extends": [
-        "google"
-    ],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
-    "plugins": [
-        "@typescript-eslint"
-    ],
-    "rules": {
-        "max-len": 0,
-        "require-jsdoc": "off",
-        "no-tabs": "off",
-        "new-cap": "off",
-        "camelcase": "off"
-    }
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
+  "extends": ["google"],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "plugins": ["@typescript-eslint"],
+  "rules": {
+    "max-len": 0,
+    "require-jsdoc": "off",
+    "no-tabs": "off",
+    "new-cap": "off",
+    "camelcase": "off",
+    "indent": ["error", 2]
+  }
 }
