--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Vitor Martins Diorio",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.1.1",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "http-status-codes": "^2.2.0",
@@ -27,6 +28,7 @@
     "@types/jest": "^27.5.0",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/mocha": "^9.1.1",
+    "@types/node": "^20.5.1",
     "@types/sinon": "^10.0.11",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
@@ -36,10 +38,11 @@
     "eslint-config-google": "^0.14.0",
     "jest": "^28.1.0",
     "mocha": "^10.0.0",
+    "prisma": "^5.1.1",
     "sequelize-cli": "^6.4.1",
     "sinon": "^14.0.0",
     "ts-jest": "^28.0.2",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.4"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   }
 }
