feat!: Authentication services

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,4 @@
-PORT=
-MYSQL_USER=
-MYSQL_PASSWORD=
-MYSQL_PORT=
-MYSQL_HOST=
-JWT_SECRET=
+PORT=3001
+JWT_SECRET=ToDoDiAeUtOcOmEnDoAbAcAxIdEqUaRtAfEIrA
+
+DATABASE_URL="mysql://root:1418@localhost:3306/eskina"
