--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Aplicação de loja virtual com controle de acesso",
   "main": "./build/src/index.js",
   "scripts": {
-    "start": "npm run tsc && node .",
+    "start": "tsc && node .",
     "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'test/**/*.ts' --exit",
     "dev": "npx nodemon ./src/index.ts"
   },
@@ -12,9 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.1.1",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.0.0",
+    "dotenv-safe": "^8.2.0",
     "express": "^4.18.1",
     "http-status-codes": "^2.2.0",
+    "jsonwebtoken": "^9.0.1",
     "mysql2": "^2.3.3",
     "node": "^17.7.2",
     "nodemon": "^2.0.16",
@@ -22,6 +25,7 @@
     "sequelize-cli-typescript": "^3.2.0-c"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/chai": "^4.3.1",
     "@types/express": "^4.17.13",
@@ -38,7 +42,7 @@
     "eslint-config-google": "^0.14.0",
     "jest": "^28.1.0",
     "mocha": "^10.0.0",
-    "prisma": "^5.1.1",
+    "prisma": "^5.2.0",
     "sequelize-cli": "^6.4.1",
     "sinon": "^14.0.0",
     "ts-jest": "^28.0.2",
